Added hugo formatting.

--- a/content/posts/2018/git.adoc
+++ b/content/posts/2018/git.adoc
@@ -1,3 +1,12 @@
+---
+title: Git Tips
+date: 2018-05-21
+categories: ["tips"]
+tags: ["tips","git"]
+language: en
+slug: git
+---
+
 == Git Tips
 
 - When you are required to use git over HTTPS but you don't want to be prompted for your credentials every time.
