--- a/content/posts/2018/xml.adoc
+++ b/content/posts/2018/xml.adoc
@@ -1,3 +1,12 @@
+---
+title: XML Tips
+date: 2018-05-21
+categories: ["tips"]
+tags: ["tips"]
+language: en
+slug: xml
+---
+
 == XML Tips
 
 - Format raw xml on the cli
