--- a/content/posts/2018/filesystems.adoc
+++ b/content/posts/2018/filesystems.adoc
@@ -1,3 +1,11 @@
+---
+title: Helpful Filesystem Tips
+date: 2018-05-21
+categories: ["tips"]
+tags: ["tips","filesystems","tune2fs","mount","kill","umount","blkid"]
+language: en
+slug: filesystems
+---
 
 == Helpful Filesystem Tips
 
