--- a/content/posts/2018/networking.adoc
+++ b/content/posts/2018/networking.adoc
@@ -1,3 +1,12 @@
+---
+title: Networking tips
+date: 2018-05-21
+categories: ["tips"]
+tags: ["tips"]
+language: en
+slug: networking
+--- 
+
 == Networking Tips
 
 - find the eth0 ip addr
