--- a/content/posts/2018/lenovo-linux-bios-update.adoc
+++ b/content/posts/2018/lenovo-linux-bios-update.adoc
@@ -2,7 +2,7 @@
 title: Lenovo BIOS/UEFI update via USB from Linux
 date: 2018-05-19
 categories: ["linux"]
-tags: ["linux","bios","uefi","update","usb"]
+tags: ["linux","bios","uefi","update","USB"]
 language: en
 slug: lenovo-linux-bios-update 
 ---
@@ -20,22 +20,22 @@ but me.
 was here: https://pcsupport.lenovo.com/us/en/downloads/ds112118
 
 . Check out this guys's great post. You would think you could just copy the
-`.iso` to your usb device with `dd`, but no you cannot.  It's a CD format `.iso`
+`.iso` to your USB device with `dd`, but no you cannot.  It's a CD format `.iso`
 and you have to pull out the CD formatting with this nice utility called 
 `geteltorito`.
 
-https://workaround.org/article/updating-the-bios-on-lenovo-laptops-from-linux-using-a-usb-flash-stick/
+https://workaround.org/article/updating-the-bios-on-lenovo-laptops-from-linux-using-a-USB-flash-stick/
 
  # wget https://download.lenovo.com/pccbbs/mobiles/n1cur21w.iso
  # dnf install geteltorito
  # geteltorito -o bios.img n1cur21w.iso
 
-Make sure you identify the correct block device of your usb drive or you will
+Make sure you identify the correct block device of your USB drive or you will
 probably have lots of other problems. This command might be helpful.
 
  # dmesg | grep sd
 
-My block device for my usb stick is /dev/sdb.  So here is the dd command to
-copy the image to the ubs:
+My block device for my USB stick is `/dev/sdb`.  So here is the dd command to
+copy the image to the USB:
 
  # dd if=bios.img of=/dev/sdb
