Updates to dnsmasq, New articles on Dell PC5324 and RHEL subscription-manager

--- a/content/posts/2018/dnsmasq.adoc
+++ b/content/posts/2018/dnsmasq.adoc
@@ -9,6 +9,8 @@ slug: split-dns-vpn-local-dnsmasq
 
 == Split DNS Resolution with VPN DNS and Local DNS
 
+Note: does not work as expected.  Trouble with connecting to different wireless networks, as each one needs manual tweak. Need a better solution.
+
 I recently installed a local identity management server with Red Hat
 Identity Management.  This is essentially a free-ipa server that hosts
 some certificate management, DNS, and LDAP to track both my machines and
