Update for 3.11 playbook python parser.  Fixes Dictionary/unicode error on playbook run.

--- a/content/posts/2018/sync-redhat-images-on-openshift-311.adoc
+++ b/content/posts/2018/sync-redhat-images-on-openshift-311.adoc
@@ -74,7 +74,7 @@ Set these variables in your OpenShift Ansible Installer inventory file footnote:
 
 [source]
 ----
-openshift_master_image_policy_config={"maxImagesBulkImportedPerRepository": 3, "disableScheduledImport": false, "MaxScheduledImageImportsPerMinute": 10, "ScheduledImageImportMinimumIntervalSeconds": 1800}
+openshift_master_image_policy_config={"MaxImagesBulkImportedPerRepository": "3", "DisableScheduledImport": "false", "MaxScheduledImageImportsPerMinute": "10", "ScheduledImageImportMinimumIntervalSeconds": "1800"}
 ----
 
 Then run the playbook to just update your master configs:
